<resources>
    <string name="app_name">Pick A Meal</string>
    <string name="main_dish_description" translatable="false">This is the meal main dish</string>
    <string name="entry_description" translatable="false">this is the meal entry dish</string>
    <string name="side_dish_description" translatable="false">this is the meal side dish</string>
    <string name="dessert_description" translatable="false">this is the dessert</string>
    <string name="drinks_description" translatable="false">this is the meal drink</string>
    <string name="main_dish_text">Main Dish: </string>
    <string name="side_dish_text">Side_dish: </string>
    <string name="entry_text">Entry: </string>
    <string name="dessert_text">Dessert: </string>
    <string name="drink_text">Drink: </string>
    <string name="background_image_description" translatable="false">This is the background of the app</string>
    <string name="menu_ramadan_breakfast">Iftar</string>
    <string name="menu_sohor">Sohor</string>
    <string name="menu_dessert">Desserts</string>
    <string name="main_meal_1">رقاق باللحمة المفرومة \nو فراخ مشوية علي الفحم </string>
    <string name="main_meal_2">محشي مشكل \nو فرخة محمرة</string>
    <string name="main_meal_3">صينية فراخ بالبطاطس في الفرن \nو ارز بسمتي بالخلطه</string>
    <string name="main_meal_4">مكرونة بالبشاميل و بفتيك </string>
    <string name="main_meal_5">مكرونة اسباجيتي \nو كفتة مشوية </string>
    <string name="main_meal_6">ملوخية و أرز ابيض \nو فراخ محمرة </string>
    <string name="main_meal_7">شوربة عدس و أرز ابيض </string>
    <string name="main_meal_8">ارز كبسة بالفراخ \nو شوربة كريمة الفراخ والمشروم</string>
    <string name="main_meal_9">ارز معمر بالبط</string>
    <string name="main_meal_10">مسقعة باللحمة المفرومة \nوبالشاميل و خبز</string>
    <string name="main_meal_11">فتة شاورما و ثومية </string>
    <string name="main_meal_12">طاجن خضار باللحم \nو ارز بالشعرية</string>
    <string name="main_meal_13">كوسة بشاميل و ارز بالشعرية \nو فراخ بانيه</string>
    <string name="main_meal_14">طاجن حمام بالفريك دجاج\nو محشي بالارز</string>
    <string name="main_meal_15">سمك مقلي\nو ارز احمر </string>
    <string name="main_meal_16">دجاج محشي بالارز</string>
    <string name="main_meal_17">شاورما فراخ\nو عيش سوري و ثومية</string>
    <string name="main_meal_18">مكرونة نجرسكو \nو فراخ بانيه</string>
    <string name="main_meal_19">دجاج تندوري \nو ارز بسمتي </string>
    <string name="main_meal_20">كشري اصفر \nو باذنجان مقلي </string>
    <string name="main_meal_21">كشري مصري و دقة و خل \nو صوص طماطم </string>
    <string name="main_meal_22">مكرونة بالسجق </string>
    <string name="main_meal_23">ارز بالشعيرية و بسلة باللحمة </string>
    <string name="main_meal_24">فراخ مشوية بالفرن و خبز </string>
    <string name="main_meal_25">صينية سمك مع البطاطس\nو ارز ابيض </string>
    <string name="main_meal_26">طاجن بامية باللحمة و خبز  </string>
    <string name="main_meal_27">بيتزا مشكل لحوم </string>
    <string name="main_meal_28">مكرونة و شاورما فراخ </string>
    <string name="main_meal_29">ورقة بطاطس باللحم \nو مكرونة بشاميل</string>
    <string name="main_meal_30">سمك مشوي و ارز ابيض </string>
    <string name="main_meal_31">بيكاتا الدجاج بالمشروم \nو ارز ابيض </string>
    <string name="main_meal_32">كبدة اسكندراني \nو مكرونة اسباجيتي </string>
    <string name="main_meal_33">لازانيا </string>
    <string name="main_meal_34">محشي ورق عنب \nو لحمة محمرة </string>
    <string name="main_meal_35">مكرونة صوص ابيض \nو صدور فراخ مشوية </string>
    <string name="main_meal_36">سمك بوري سنجاري \nو ارز صيادية بالخلطة </string>
    <string name="main_meal_37">رقاق باللحمة المفرومة \nو لحمة باردة و مكرونة بشاميل </string>
    <string name="main_meal_38">قرنبيط مقلي بالخلطة \nو مسقعة باللحمة المفرومة و خبز</string>
    <string name="main_meal_39">كانيلوني \nو كفتة داوود باشا و برام أرز </string>
    <string name="main_meal_40">كوردن بلو \nو مكرونة بصوص ابيض </string>
    <string name="main_meal_41">حواوشي </string>
    <string name="main_meal_42">طاجن بامية باللحمة الضاني \nو ارز بالشعيرية</string>
    <string name="main_meal_43">صينية بطاطس باللحم في الفرن \nو برام ارز مفلفل بالكبد والقوانص</string>
    <string name="main_meal_44">كفتة وكباب مشوي علي الفحم \nو كفتة طرب و خبز </string>
    <string name="main_meal_45">صينية بطاطس بالبشاميل و ارز</string>
    <string name="main_meal_46">كباب حلة و ارز بالشعرية</string>
    <string name="main_meal_47">ماك اند شيز اجنحة دجاج مقلية</string>
    <string name="main_meal_48">ريش ضاني \nو ارز بالخلطة</string>
    <string name="main_meal_49">مكرونة بالتونة</string>
    <string name="main_meal_50">كبدة اسكالوب \nو ارز بالشعرية</string>
    <string name="main_meal_51">بيتزا سوبر سوبريم </string>
    <string name="main_meal_52">فراخ بصوص الليمون \nو ارز بسمتى</string>
    <string name="main_meal_53">ميني بيتزا</string>
    <string name="main_meal_54">فطائر السبانخ</string>
    <string name="main_meal_55">فطائر الجبن</string>
    <string name="main_meal_56">فطائر اللحمة المفرومة</string>
    <string name="main_meal_57">سمبوسك بالجبنة والسبانخ</string>
    <string name="main_meal_58">قطايف بحشوة الجبن \nوالزيتون و الفلفل الاخضر</string>
    <string name="main_meal_59">مناقيش بالزعتر</string>
    <string name="main_meal_60">فول مدمس بالطماطم</string>
    <string name="main_meal_61">فول بالبيض</string>
    <string name="main_meal_62">فول مدمس بالطحينة</string>
    <string name="main_meal_63">فول بالسجق</string>
    <string name="main_meal_64">فول بالسلطة</string>
    <string name="main_meal_65">فول بالقشطة</string>
    <string name="main_meal_66">فول بالبسطرمة</string>
    <string name="main_meal_67">فول بالزيت الحار والليمون</string>
    <string name="main_meal_68">سجق بالخلطة</string>
    <string name="main_meal_69">طاجن سجق بالجبنة</string>
    <string name="main_meal_70">برك بالجبنة والسبانخ</string>
    <string name="main_meal_71">بان كيك البطاطس بالبصل</string>
    <string name="entry_1">سلطة خضراء</string>
    <string name="entry_2">شوربة لسان عصفور</string>
    <string name="entry_3">سلطة زبادي</string>
    <string name="entry_4">سلطة طحينة</string>
    <string name="entry_5">شوربة شعيرية</string>
    <string name="entry_6">مخلل</string>
    <string name="entry_7">بابا غنوج</string>
    <string name="entry_8">سلطة زبادي بالخيار</string>
    <string name="entry_9">سلطة خضراء</string>
    <string name="entry_10">سلطة فواكه</string>
    <string name="entry_11">بليلة بالحليب</string>
    <string name="entry_12">زبادي</string>
    <string name="entry_13">خس</string>
    <string name="entry_14">لبن رايب</string>
    <string name="entry_15">خيار</string>
    <string name="entry_16">سلطة الفواكه بالشوفان</string>
    <string name="entry_17">طماطم شرائح</string>
    <string name="entry_18">لبن بالبلح</string>
    <string name="entry_19">سلطة المكرونة بالخضار والمايونيز</string>
    <string name="side_dish_1">كبيبة بطاطس</string>
    <string name="side_dish_2">سمبوسك باللحمة المفرومة</string>
    <string name="side_dish_3">سمبوسك بالجبن</string>
    <string name="side_dish_4">بطاطس محمرة</string>
    <string name="side_dish_5">كبيبة باللحم</string>
    <string name="side_dish_6">ناجتس فراخ</string>
    <string name="side_dish_7">كفتة فراخ</string>
    <string name="side_dish_8">بطاطس ويدجز</string>
    <string name="side_dish_9">كبة شامية</string>
    <string name="side_dish_10">كبة بطاطس بالدجاج</string>
    <string name="side_dish_11">سبرينج رولز</string>
    <string name="side_dish_12">اصابع موزاريلا مقلية</string>
    <string name="side_dish_13">حلقات بصل مقلية</string>
    <string name="side_dish_14">اجنحة دجاج مقلية</string>
    <string name="side_dish_15">كفتة بطاطس باللحم المفروم</string>
    <string name="side_dish_16">كور البطاطس بالجبنة</string>
    <string name="side_dish_17">بطاطس شيبسي</string>
    <string name="side_dish_18">تكساس فرايز</string>
    <string name="side_dish_19">جبنة قريش</string>
    <string name="side_dish_20">سلطة جبنة فيتا</string>
    <string name="side_dish_21">جبنة بالطماطم</string>
    <string name="side_dish_22">جبنة مقلية</string>
    <string name="side_dish_23">البيض المدحرج</string>
    <string name="side_dish_24">بيض اومليت</string>
    <string name="side_dish_25">بيض عيون</string>
    <string name="side_dish_26">شكشوكة</string>
    <string name="side_dish_27">بيض مسلوق</string>
    <string name="side_dish_28">بيض بالجبنة الفيتا</string>
    <string name="side_dish_29">بيض بالمشروم</string>
    <string name="side_dish_30">بيض بالبسطرمة</string>
    <string name="side_dish_31">عجة البيض</string>
    <string name="side_dish_32">بطاطس بيوريه في الفرن</string>
    <string name="side_dish_33">بطاطس متبلة</string>
    <string name="side_dish_34">مربي</string>
    <string name="side_dish_35">حلاوة طحينية</string>
    <string name="side_dish_36">عسل ابيض</string>
    <string name="side_dish_37">بطاطس محشوة بالجبن</string>
    <string name="side_dish_38">بطاطس محمرة</string>
    <string name="side_dish_39">بطاطس بالبيض</string>
    <string name="side_dish_40">بطاطس كروكيت</string>
    <string name="side_dish_41">كفتة بطاطس باللحمة المفرومة</string>
    <string name="side_dish_42">جبنة رومي وطماطم</string>
    <string name="side_dish_43">بيض بالعجوة</string>
    <string name="dessert_1">كنافة بالفستق</string>
    <string name="dessert_2">كنافة بالمهلبية </string>
    <string name="dessert_3">كنافة نابلسية</string>
    <string name="dessert_4">بسبوسة </string>
    <string name="dessert_5">بسبوسة بالقشطة</string>
    <string name="dessert_6">بسبوسة بالمكسرات</string>
    <string name="dessert_7">مهلبية </string>
    <string name="dessert_8">مهلبية بالمستكه</string>
    <string name="dessert_9">مهلبية قمر الدين</string>
    <string name="dessert_10">بسبوسة بالنوتيلا</string>
    <string name="dessert_11">بسبوسة باللوتس</string>
    <string name="dessert_12">ام علي بالمكسرات</string>
    <string name="dessert_13">بسيمة</string>
    <string name="dessert_14">هريسة</string>
    <string name="dessert_15">قطايف بالمكسرات</string>
    <string name="dessert_16">بلح الشام</string>
    <string name="dessert_17">العزيزية</string>
    <string name="dessert_18">بقلاوة</string>
    <string name="dessert_19">بودينج المانجو</string>
    <string name="dessert_20">بودينج الشوكولا</string>
    <string name="dessert_21">بودينج الموز</string>
    <string name="dessert_22">تيراميسو</string>
    <string name="dessert_23">كنافة شيز كيك</string>
    <string name="dessert_24">كنافة بالمانجو</string>
    <string name="dessert_25">كريم كرامل</string>
    <string name="dessert_26">ارز باللبن </string>
    <string name="dessert_27">كيك التمر</string>
    <string name="dessert_28">ليزي كيك بالشوكولاته</string>
    <string name="dessert_29">زلابية</string>
    <string name="dessert_30">مهلبية بالجيلي</string>
    <string name="dessert_31">قطايف بالنوتيلا</string>
    <string name="dessert_32">قطايف بالقشطة</string>
    <string name="dessert_33">رموش الست</string>
    <string name="dessert_34">شكلما</string>
    <string name="dessert_35">تارت البلح</string>
    <string name="dessert_36">تارت النوتيلا</string>
    <string name="dessert_37">تشيز كيك</string>
    <string name="dessert_38">جيلي بالموز</string>
    <string name="dessert_39">جلاش بالمكسرات</string>
    <string name="drink_1">تمر هندي</string>
    <string name="drink_2">خروب</string>
    <string name="drink_3">عرقسوس</string>
    <string name="drink_4">بلح باللبن</string>
    <string name="drink_5">خشاف </string>
    <string name="drink_6">قمر الدين</string>
    <string name="img_main_description" translatable="false">this is the main dish image</string>
    <string name="img_side_description" translatable="false">this is the side dish image</string>
    <string name="img_entry_description" translatable="false">this is the entry image</string>
    <string name="img_dessert_decription" translatable="false">this is the dessert image</string>
    <string name="img_drinks_description" translatable="false">this is the drinks image</string>
</resources>